--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>spring-batch-core</artifactId>
             <version>4.0.0.M1</version>
         </dependency>
+        <dependency>
+            <groupId>com.filenet</groupId>
+            <artifactId>jace</artifactId>
+            <version>5.2.1.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
