--- a/pom.xml
+++ b/pom.xml
@@ -12,24 +12,24 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.0.0.M4</version>
+            <version>[5.0.0, 6.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.0.0-M4</version>
+            <version>[5.0.0, 6.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-core</artifactId>
-            <version>4.0.0.M1</version>
+            <version>[4.0.0, 5.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.filenet</groupId>
             <artifactId>jace</artifactId>
-            <version>5.2.1.2</version>
+            <version>[5.2, 5.3)</version>
         </dependency>
     </dependencies>
 
