--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.springframework.batch</groupId>
+    <groupId>com.github.belaso</groupId>
     <artifactId>spring-batch-filenet</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -12,19 +12,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>[5.0.0, 6.0.0)</version>
+            <version>[5.0.0.M4, 6.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>[5.0.0, 6.0.0)</version>
+            <version>[5.0.0-M4, 6.0.0)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-core</artifactId>
-            <version>[4.0.0, 5.0.0)</version>
+            <version>[4.0.0.M1, 5.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.filenet</groupId>
