--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.belaso</groupId>
     <artifactId>spring-batch-filenet</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>This project contains extensions for Spring Batch (https://github.com/spring-projects/spring-batch)
